--- a/public/offline.html
+++ b/public/offline.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FarmConnect - Offline</title>
+    <title>FarmEasy - Offline</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -54,7 +54,7 @@
     <div class="container">
         <div class="icon">🌾</div>
         <h1>You're Offline</h1>
-        <p>FarmConnect needs an internet connection to work properly. Please check your connection and try again.</p>
+        <p>FarmEasy needs an internet connection to work properly. Please check your connection and try again.</p>
         <button class="retry-btn" onclick="window.location.reload()">
             Try Again
         </button>
